# movie_dashboard_API/app/models/movie.rb
@@ -4,6 +4,8 @@ class Movie < ApplicationRecord
   has_many :genres, through: :movie_genres
   has_many :reviews, dependent: :destroy
   has_many :watchlists, dependent: :destroy
+  has_many :movie_actors, dependent: :destroy
+  has_many :actors, through: :movie_actors
 
   # Validations
   validates :tmdb_id, presence: true, uniqueness: true
